--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
                         <a href="https://4chan.org/jp/">/jp/</a>
                         <a href="https://4chan.org/r9k/">/r9k/</a>
                         <a href="https://www.4chan.org/wg/">/wg/</a>
+                        <a href="https://www.reddit.com/r/BetterEveryLoop/">/be/</a>
+                        <a href="https://www.reddit.com/r/youtubehaiku/">/yh/</a>
                     </li>
                     <li>
                         <h1>Comfy</h1>
                         <a href="https://sushigirl.us/kawaii/">/kawaii/</a>
                         <a href="https://sushigirl.us/lounge/">/lounge/</a>
-                        <a href="https://www.4chan.org/wsg/">/wsg/</a>
                     </li>
                     <li>
                         <h1>Technology</h1>
